<package format="2">
  <name>simple_hybrid_joint_controller</name>
  <version>0.0.1</version>
  <description>All-joint hybrid controller (pos/vel/kp/kd/ff) for DmHW.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>legged_common</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>legged_common</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/simple_hybrid_joint_controller_plugins.xml"/>
  </export>
</package>